--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.10"
 Django = "^4.2.1"
 djangorestframework = "^3.14.0"
 django-cors-headers = "^3.14.0"
+pytest = "^7.3.2"
 
 [tool.poetry.dev-dependencies]
 
