--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Django = "^4.2.1"
 djangorestframework = "^3.14.0"
 django-cors-headers = "^3.14.0"
 pytest = "^7.3.2"
+pytest-django = "^4.6.0"
 
 [tool.poetry.dev-dependencies]
 
