--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ djangorestframework = "^3.14.0"
 django-cors-headers = "^3.14.0"
 pytest = "^7.3.2"
 pytest-django = "^4.6.0"
+orca-nw-lib = "^1.0"
 
 [tool.poetry.dev-dependencies]
 
