--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django-cors-headers = "^3.14.0"
 pytest = "^7.3.2"
 pytest-django = "^4.7.0"
 orca-nw-lib = "^1.3.3"
+django-oauth-toolkit="^2.3.0"
 
 [tool.poetry.dev-dependencies]
 
