--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,7 @@
 {
-    "python.testing.unittestArgs": [
-        "-v",
-        "-s",
-        "./network/test",
-        "-p",
-        "*.py"
+    "python.testing.pytestArgs": [
+        "network/test"
     ],
-    "python.testing.pytestEnabled": true,
-    "python.testing.unittestEnabled": true,
-    "python.linting.enabled": true,
-    "python.linting.pylintEnabled": true
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
