--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ django-cors-headers = "^3.14.0"
 pytest = "^7.3.2"
 pytest-django = "^4.7.0"
 orca-nw-lib = "^1.3.6"
+openai = "^1.16.0"
+pydantic = "^2.6.4"
 
 [tool.poetry.dev-dependencies]
 
