Added more config options for VLAN.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "python.testing.pytestArgs": [
-        "network/test"
+        "network/test",
+        "ORCASK/test"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true
