--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Orca backend web server implemets orca_nw_lib"
 readme = "readme.md"
 authors = ["kamal bhatt <kamal.bhatt@stordis.com>"]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
