--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "python.testing.pytestArgs": [
         "network/test",
-        "ORCASK/test"
+        "ORCASK/test",
+        "authentication/test"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true
