readme file name corrected.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "orca_backend"
 version = "0.1.0"
 description = "Orca backend web server implemets orca_nw_lib"
-readme = "readme.md"
+readme = "README.md"
 authors = ["kamal bhatt <kamal.bhatt@stordis.com>"]
 package-mode = false
 
