--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ django-cors-headers = "^3.14.0"
 pytest = "^7.3.2"
 pytest-django = "^4.7.0"
 orca-nw-lib = "^1.3.11"
+celery = "^5.4.0"
+redis = "^5.0.4"
 
 [tool.poetry.dev-dependencies]
 
