--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ django-cors-headers = "^3.14.0"
 pytest = "^7.3.2"
 pytest-django = "^4.7.0"
 orca-nw-lib = "^1.3.13"
+packaging = "^23.2"# Because of langchain dependencies in ORCASK, packaging should not be greater than 23.y.z.
+
 
 [tool.poetry.dev-dependencies]
 
