Corrected the branch name for testing.

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,7 +5,7 @@ on:
     types: [created]
   push:
     branches:
-      - kamalkrbh/issue45
+      - Github-workflow-to-publish-Docker-image.-#45
 
 jobs:
   build-and-push:
