--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,28 +1,54 @@
-name: Build and Push Docker Image on Release
+name: Build and Push Docker Image
 
+# This workflow automates the building and pushing of Docker images for the orca_backend project.
+# It is triggered by the following events:
+# - Release creation: When a new release is created in the repository.
+# - Push to main branch: When a push is made to the main branch.
+# - Nightly build: Every day at midnight UTC.
 on:
   release:
     types: [created]
   push:
     branches:
-      - Github-workflow-to-publish-Docker-image.-#45
+      - main
+  schedule:
+    - cron: '0 0 * * *'  # Run at midnight UTC
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Use the Ubuntu latest runner for the job.
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3  # Checkout the repository's code.
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v1  # Log in to Docker Hub using secrets.
         with:
-          username: ${{ secrets.STORDIS_DOCKER_HUB_USER }}
-          password: ${{ secrets.STORDIS_DOCKER_HUB_ACCESS_TOKEN }}
+          username: ${{ secrets.STORDIS_DOCKER_HUB_USER }}  # Your Docker Hub username.
+          password: ${{ secrets.STORDIS_DOCKER_HUB_ACCESS_TOKEN }}  # Your Docker Hub access token.
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:latest .
+          # Determine the image tag based on the trigger event:
+          # - Release Build: Use the release tag from the 'release' event.
+          # - Push to 'main': Use the commit hash and the first word of the commit message.
+          # - Nightly Build: Use a nightly tag with a number between 0 and 9, cycling every 10 days.
+          if [[ ${{ github.event_name }} == 'release' ]]; then
+            docker build -t ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:${{ github.event.release.tag_name }} .
+          elif [[ ${{ github.event_name }} == 'push' && ${{ github.ref }} == 'refs/heads/main' ]]; then
+            docker build -t ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:${{ github.sha }}-${{ github.event.head_commit.message | cut -d' ' -f1 | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9]/_/g' }} .
+          else
+            nightly_build_number=$(( $(date +%j) % 10 ))
+            docker build -t ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:nightly-${nightly_build_number} .
+          fi
 
       - name: Push Docker Image
-        run: docker push ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:latest
+        run: |
+          # Push the built Docker image to Docker Hub using the determined tag.
+          if [[ ${{ github.event_name }} == 'release' ]]; then
+            docker push ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:${{ github.event.release.tag_name }}
+          elif [[ ${{ github.event_name }} == 'push' && ${{ github.ref }} == 'refs/heads/main' ]]; then
+            docker push ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:${{ github.sha }}-${{ github.event.head_commit.message | cut -d' ' -f1 | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9]/_/g' }}
+          else
+            docker push ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:nightly-${nightly_build_number}
+          fi
