--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,39 +16,33 @@ on:
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest  # Use the Ubuntu latest runner for the job.
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Checkout the repository's code.
+        uses: actions/checkout@v3
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v1  # Log in to Docker Hub using secrets.
+        uses: docker/login-action@v1
         with:
-          username: ${{ secrets.STORDIS_DOCKER_HUB_USER }}  # Your Docker Hub username.
-          password: ${{ secrets.STORDIS_DOCKER_HUB_ACCESS_TOKEN }}  # Your Docker Hub access token.
+          username: ${{ secrets.STORDIS_DOCKER_HUB_USER }}
+          password: ${{ secrets.STORDIS_DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Generate Image Tag
+        run: |
+          if [[ ${{ github.event_name }} == 'release' ]]; then
+            image_tag="${{ github.event.release.tag_name }}"
+          elif [[ ${{ github.event_name }} == 'push' && ${{ github.ref }} == 'refs/heads/main' ]]; then
+            image_tag="${{ github.sha }}-${{ github.event.head_commit.message | cut -d' ' -f1 | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9]/_/g' }}"
+          else
+            nightly_build_number=$(( $(date +%j) % 10 ))
+            image_tag="nightly-${nightly_build_number}"
+          fi
+          echo "Image Tag: $image_tag"
 
       - name: Build Docker Image
         run: |
-          # Determine the image tag based on the trigger event:
-          # - Release Build: Use the release tag from the 'release' event.
-          # - Push to 'main': Use the commit hash and the first word of the commit message.
-          # - Nightly Build: Use a nightly tag with a number between 0 and 9, cycling every 10 days.
-          if [[ ${{ github.event_name }} == 'release' ]]; then
-            docker build -t ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:${{ github.event.release.tag_name }} .
-          elif [[ ${{ github.event_name }} == 'push' && ${{ github.ref }} == 'refs/heads/main' ]]; then
-            docker build -t ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:${{ github.sha }}-${{ github.event.head_commit.message | cut -d' ' -f1 | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9]/_/g' }} .
-          else
-            nightly_build_number=$(( $(date +%j) % 10 ))
-            docker build -t ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:nightly-${nightly_build_number} .
-          fi
+          docker build -t ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:$image_tag .
 
       - name: Push Docker Image
         run: |
-          # Push the built Docker image to Docker Hub using the determined tag.
-          if [[ ${{ github.event_name }} == 'release' ]]; then
-            docker push ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:${{ github.event.release.tag_name }}
-          elif [[ ${{ github.event_name }} == 'push' && ${{ github.ref }} == 'refs/heads/main' ]]; then
-            docker push ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:${{ github.sha }}-${{ github.event.head_commit.message | cut -d' ' -f1 | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9]/_/g' }}
-          else
-            docker push ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:nightly-${nightly_build_number}
-          fi
+          docker push ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:$image_tag
