set_env is disabled so use environment

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -38,13 +38,13 @@ jobs:
             nightly_build_number=$(( $(date +%j) % 10 ))
             image_tag="nightly-${nightly_build_number}"
           fi
-          echo "::set-env name=IMAGE_TAG::$image_tag" 
-          echo "Image Tag: $IMAGE_TAG"
+          echo "Image Tag: $image_tag"
+          echo "IMAGE_TAG=$image_tag" >> $GITHUB_ENV
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:$IMAGE_TAG .
+          docker build -t ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:${{ env.IMAGE_TAG }} .
 
       - name: Push Docker Image
         run: |
-          docker push ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:$IMAGE_TAG
+          docker push ${{ secrets.STORDIS_DOCKER_HUB_USER }}/orca_backend:${{ env.IMAGE_TAG }}
