--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,7 +21,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         # Checkout the code from the repository
-
+        
+      - name: Docker Hub Description
+        uses: peter-evans/dockerhub-description@v4
+        with:
+          username: ${{ secrets.STORDIS_DOCKER_HUB_USER }}
+          password: ${{ secrets.STORDIS_DOCKER_HUB_ACCESS_TOKEN }}
+          repository: stordis/orca_backend
+          short-description: ${{ github.event.repository.description }}
+          enable-url-completion: true
+        
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
