--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ pytest = "^7.3.2"
 pytest-django = "^4.7.0"
 orca-nw-lib = "*" # Use latest version of orca_nw_lib from PyPI
 packaging = "^23.2"# Because of langchain dependencies in ORCASK, packaging should not be greater than 23.y.z.
-
+setuptools = "72.1.0"
 [tool.poetry.dev-dependencies]
 
 [build-system]
