--- a/network/test/test_orca_setup_config.yaml
+++ b/network/test/test_orca_setup_config.yaml
@@ -2,5 +2,6 @@ sonic_ips:
   - 10.10.229.124
 onie_ips:
   - 10.10.229.123
-sonic_image_4.4.0_url: http://10.10.128.249/sonic/release/4.4.0/sonic-broadcom-enterprise-advanced.bin
-socic_image_4.2.0_url: http://10.10.128.249/sonic/release/4.2.0/sonic-broadcom-enterprise-advanced.bin
+sonic_img_details:
+  url: http://10.10.128.249/sonic/release/4.2.2/sonic-vs.bin
+  name: SONiC-OS-4.2.2-Enterprise_Base
