Use elif and also include the state manager tests.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "python.testing.pytestArgs": [
         "network/test",
         "authentication/test",
-        "orcask/test"    ],
+        "orcask/test",
+        "state_manager/test"   ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true
 }
