--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ pytest-django = "^4.7.0"
 APScheduler = "^3.10.4"
 orca-nw-lib = "*" # Use latest version of orca_nw_lib from PyPI
 packaging = "^23.2"# Because of langchain dependencies in ORCASK, packaging should not be greater than 23.y.z.
-setuptools = "65.5.1"
+setuptools = "65.5.1"# Fixing the version otherwise poetry install tries to update the setuptools, and the update fails in GitHub Actions, Issue is specific to GitHub Actions only, but when running locally the update works.
 
 [tool.poetry.dev-dependencies]
 
