--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,4 @@ setuptools = "65.5.1"# Fixing the version otherwise poetry install tries to upda
 celery = "^5.4.0"
 redis = "^5.0.4"
 django-celery-results="2.5.1"
+paramiko = "^3.5.0"
