cleaning template files

--- a/fileserver/media/templates/dhcpd_template.conf
+++ b/fileserver/media/templates/dhcpd_template.conf
@@ -1,13 +1,13 @@
 # dhcpd.conf.j2
 #
-# configuration file template for ISC dhcpd
+# Configuration file template for ISC dhcpd
 #
 # Attention: If /etc/ltsp/dhcpd.conf exists, that will be used as
 # configuration file instead of this file.
 #
 
-# option definitions common to all supported networks...
-option domain-name "stordis.lab";
+# Option definitions common to all supported networks...
+option domain-name "demo.lab";
 
 default-lease-time 600;
 max-lease-time 7200;
@@ -24,25 +24,25 @@ authoritative;
 
 # Use this to send dhcp log messages to a different log file (you also
 # have to hack syslog.conf to complete the redirection).
-#log-facility local7;
+# log-facility local7;
 
 class "onie-switch" {
   match if exists user-class and (option user-class = "onie_dhcp_user_class" or option user-class = "\x14onie_dhcp_user_class");
-  log(info,"found ONIE switch");
-  option default-url = "http://10.10.128.249/sonic/release/latest/sonic-broadcom-enterprise-advanced.bin";
+  log(info, "found demo switch");
+  option default-url = "http://192.168.1.1/demo/latest/demo-firmware.bin";
 }
 
 class "sonic-switch" {
- match if exists user-class and (option user-class = "SONiC-ZTP" or option user-class = "\x09SONiC-ZTP");
- option bootfile-name = "http://10.10.128.249/sonic/ztp/ztp.json";
+  match if exists user-class and (option user-class = "sonic-ztp" or option user-class = "\x09sonic-ztp");
+  option bootfile-name = "http://192.168.1.1/demo/ztp/demo-config.json";
 }
 
-subnet 10.10.130.0 netmask 255.255.254.0 {
-  range 10.10.130.128 10.10.130.255;
-  option routers 10.10.131.254;
-  option subnet-mask 255.255.254.0;
-  option domain-name-servers 10.10.131.254;
-  option ntp-servers 10.10.131.254;
+subnet 192.168.1.0 netmask 255.255.255.0 {
+  range 192.168.1.128 192.168.1.255;
+  option routers 192.168.1.1;
+  option subnet-mask 255.255.255.0;
+  option domain-name-servers 192.168.1.1;
+  option ntp-servers 192.168.1.1;
 }
 
 # Hosts which require special configuration options can be listed in
@@ -50,87 +50,12 @@ subnet 10.10.130.0 netmask 255.255.254.0 {
 # allocated dynamically (if possible), but the host-specific information
 # will still come from the host declaration.
 
-host sonic-buildvm {
-  hardware ethernet 00:0c:29:33:ba:2c;
-  fixed-address 10.10.131.1;
-}
-#host sonic-dev-img {
-#  hardware ethernet 00:0c:29:ea:85:b1;
-#  fixed-address 10.10.131.2;
-#}
-host sonic-ansible {
-  hardware ethernet 00:0c:29:a8:13:bf;
-  fixed-address 10.10.131.3;
-  option host-name "sonic-ansible";
-}
-host sonic-dev-gitlab {
-  hardware ethernet 00:0c:29:55:4e:67;
-  fixed-address 10.10.131.4;
-}
-host sonic-dev-prometheus {
-  hardware ethernet 00:0c:29:7b:52:be;
-  fixed-address 10.10.131.5;
-}
-host kamal-dev {
-  hardware ethernet ba:86:f0:b5:8d:72;
-  fixed-address 10.10.131.6;
-}
+host demo {
+  hardware ethernet 00:00:00:00:00:02;
+  fixed-address 192.168.1.11;
+  option host-name "demo";
 
-host gns3 {
-  hardware ethernet 00:0c:29:c4:ee:18;
-  fixed-address 10.10.130.25;
+  #  option default-url = "http://192.168.1.1/ocnos/abc-installer";
+  #  option default-url = "http://192.168.1.1/sonic/release/4.0.0/sonic-broadcom-enterprise-advanced.bin";
+  #  option bootfile-name = "http://192.168.1.1/sonic/ztp/ztp.json";
 }
-
-host gns-switch1 {
-  hardware ethernet 0c:3d:7c:1b:00:00;
-  fixed-address 10.10.130.9;
-}
-host gns-switch2 {
-  hardware ethernet 0c:9b:bf:5e:00:00;
-  fixed-address 10.10.130.10;
-}
-host gns-switch3 {
-  hardware ethernet 0c:72:05:74:00:00;
-  fixed-address 10.10.130.11;
-}
-host gns-switch4 {
-  hardware ethernet 0c:f9:6a:c7:00:00;
-  fixed-address 10.10.130.12;
-}
-host gns-switch5 {
-  hardware ethernet 0c:33:46:7e:00:00;
-  fixed-address 10.10.130.13;
-}
-host gns-switch6 {
-  hardware ethernet 0c:a1:1f:f2:00:00;
-  fixed-address 10.10.130.14;
-}
-
-host spine-1 {
-  hardware ethernet 68:21:5f:46:cf:6e;
-  fixed-address 10.10.131.111;
-#  option default-url = "http://10.10.128.249/ocnos/EC_AS7726_32X-OcNOS-1.3.9.345-DC_IPBASE-S0-P0-installer";
-#  option default-url = "http://10.10.128.249/sonic/release/4.0.0/sonic-broadcom-enterprise-advanced.bin";
-#  option bootfile-name = "http://10.10.128.249/sonic/ztp/ztp.json";
-}
-host spine-2 {
-  hardware ethernet e4:9d:73:7a:5a:f3;
-  fixed-address 10.10.131.112;
-#  option default-url = "http://10.10.128.249/ocnos/EC_AS7726_32X-OcNOS-1.3.9.345-DC_IPBASE-S0-P0-installer";
-#  option default-url = "http://10.10.128.249/sonic/release/4.0.0/sonic-broadcom-enterprise-advanced.bin";
-#  option bootfile-name = "http://10.10.128.249/sonic/ztp/ztp.json";
-}
-host leaf-1 {
-  hardware ethernet 80:a2:35:81:e2:f0;
-  fixed-address 10.10.131.121;
-#  option default-url = "http://10.10.128.249/ocnos/EC_AS7326_56X-OcNOS-1.3.9.345-DC_IPBASE-S0-P0-installer";
-#  option default-url = "http://10.10.128.249/sonic/release/4.0.0/sonic-broadcom-enterprise-advanced.bin";
-#  option bootfile-name = "http://10.10.128.249/sonic/ztp/ztp.json";
-}
-host leaf-2 {
-  hardware ethernet 90:3c:b3:34:29:60;
-  fixed-address 10.10.131.122;
-#  option default-url = "http://10.10.128.249/ocnos/EC_AS7326_56X-OcNOS-1.3.9.345-DC_IPBASE-S0-P0-installer";
-#  option bootfile-name = "http://10.10.128.249/sonic/ztp/ztp.json";
-}
-
