bug fixes from demo

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ models
 !**/migrations/__init__.py
 fileserver/media/*
 !fileserver/media/templates
+!fileserver/media/download/
+fileserver/media/download/**
