--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "python.testing.pytestArgs": [
         "network/test",
         "authentication/test",
-        "orcask/test/*.py",
+        "orcask/test",
         "state_manager/test"   
     ],
     "python.testing.pytestEnabled": true
