--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,16 +25,21 @@ services:
       interval: 5s
       timeout: 10s
       retries: 5
+    volumes:
+      - ./neo4j/data:/data
+      - ./neo4j/logs:/logs  # Updated to separate data and logs
 
   redis:
     image: redis:latest
     ports:
       - "6378:6379"
+    volumes:
+      - ./redis:/data  # Changed to use relative path, adjust if needed
 
   celery:
     restart: unless-stopped
     build: .
-    command: poetry run celery -A orca_backend worker --loglevel=info --pool=prefork --concurrency=1
+    command: celery -A orca_backend worker --loglevel=info --pool=prefork --concurrency=1
     volumes:
       - .:/orca_backend
     depends_on:
@@ -44,3 +49,9 @@ services:
     environment:
       neo4j_url: neo4j
       CELERY_BROKER_URL: redis://redis:6379/0
+
+volumes:
+  neo4j:
+    driver: local
+  redis:
+    driver: local
